# Battleships

./: Bot.c  CMakeLists.txt  Game.c  Grid.c  Main.c  MakeFile  Makefile  Player.c  header.h  info.txt  main.c  ship.c
src/: Bot.c  Display.c  Game.c  Globals.c  Globals.h  Grid.c  Header.h  Main.c  Menu.c  Player.c  Records.c  Ship.c  globals.c  globals.h  header.h
